--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -1711,18 +1711,15 @@ effectively change the ratio of tree to topology-change events.
 \begin{figure}[t]
 	\centering
 	%\fbox{\rule[-.5cm]{4cm}{4cm} \rule[-.5cm]{4cm}{0cm}}
-	\includegraphics[width=0.9\textwidth]{figures/Fig4-new-validation.pdf}
+	\includegraphics[width=0.99\textwidth]{figures/Fig4-final-validation2.pdf}
 	\caption{
-		\hl{it doesn't seem to me that the two different sized trees here showed a 
-		very revealing insight. If we care about number of tips, then we could create a 
-		plot where one of the axes varies the number of tips, and have many more
-		points of data. I'd like to make this and the next figure a bit more 
-		"dense" in terms of their information-to-space ratios. For now, one idea is
-		to show just one tree size, but I'm thinking moreso that we could add two
-		plots next to each tree.}
+		MS-SMC' estimates of waiting distances between recombination
+		event types validated against coalescent simulations. Results are 
+		shown for three models (a) containing either 1, 2, or 8 populations,
+		among which a genealogy for 8 samples is embedded.
 	}
 	% Mean expected waiting distances for differently parameterized species tree models. We used four different species trees: two 10-tip trees (a, b), each with 1e6-generation root heights, and two 5-tip trees (c, d) that are subselected from each of the larger trees. For each species tree, we iterated over 9 Ne values ranging from 50000 to 250000, generating 1000 unlinked MSC genealogies at each Ne value and calculating the expected waiting distance to a tree change and to a topology change for each. The mean of the expected waiting distances at each Ne value is presented in the scatterplot accompanying each species tree. Note that the y-axis scale changes from the top row (a, b) to the bottom row (c, d).}
-	 \label{fig:fig4}
+	 \label{fig:fig-validation}
 \end{figure}
 
 
